# qrace

./: .gitignore  KICKOFF_PROMPT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  DESIGN.md  PLAN.md  ROADMAP.md
notebooks/: 01_quickstart.ipynb  02_report_and_shapley.ipynb
qrace/: __init__.py  advisor.py  backend.py  classical.py  crossover.py  pricing.py  report.py  resources.py  shapley.py  spec.py  verdict.py
tests/: test_advisor.py  test_backend.py  test_classical.py  test_crossover.py  test_pricing.py  test_report.py  test_resources.py  test_shapley.py  test_smoke.py  test_spec.py  test_verdict.py
