[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrace"
version = "0.1.0"
description = "Quantum Risk Advisor & Crossover Estimator — an honesty layer on quantum amplitude estimation for option pricing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "qrace contributors" }]
keywords = ["quantum", "finance", "option-pricing", "amplitude-estimation", "qiskit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "qiskit==2.4.2",
    "qiskit-aer==0.17.2",
    "qiskit-algorithms==0.4.0",
    "qiskit-finance==0.4.1",
    "financepy==1.0.1",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "matplotlib==3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
    "mypy==2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["qrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["financepy.*"]
ignore_missing_imports = true
